--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "export": "next export"
   },
   "dependencies": {
+    "@next/font": "^13.0.0",
+    "@vercel/analytics": "^0.1.1",
+    "client-only": "^0.0.1",
     "framer-motion": "^7.6.1",
-    "next": "12.3.1",
-    "react": "18.2.0",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
     "react-animated-cursor": "^2.5.2",
-    "react-dom": "18.2.0",
-    "react-simple-typewriter": "^4.0.5"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-simple-typewriter": "^4.0.5",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
@@ -23,7 +28,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^12.3.2-canary.43",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
