--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "export": "next export"
   },
   "dependencies": {
     "@next/font": "^13.0.0",
     "@vercel/analytics": "^0.1.1",
     "client-only": "^0.0.1",
+    "cross-env": "^7.0.3",
     "framer-motion": "^7.6.1",
     "next": "^13.0.0",
     "react": "^18.2.0",
@@ -20,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-simple-typewriter": "^4.0.5",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
