--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "^12.3.2-canary.43",
     "postcss": "^8.4.18",
+    "sass": "^1.55.0",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
