--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "client-only": "^0.0.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^7.6.1",
+    "gsap": "^3.11.4",
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.2",
@@ -23,12 +24,15 @@
     "react-icons": "^4.6.0",
     "react-simple-typewriter": "^4.0.5",
     "server-only": "^0.0.1",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.0",
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "^12.3.2-canary.43",
